# Halftones

./: .gitignore  CLAUDE.md  FEATURES.md  README.md  package-lock.json  package.json
.claude/: launch.json
docs/superpowers/plans/: 2026-04-21-webgl2-halftone-renderer.md
docs/superpowers/specs/: 2026-04-21-tauri-desktop-app-design.md
src/: App.css  App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  menu.rs  startup.rs
src/components/: CMYKControls.tsx  ControlPanel.tsx  CropOverlay.tsx  EditableValue.tsx  ExportBar.tsx  HalftoneControls.tsx  ImageLoader.tsx  MaskControls.tsx  OutputControls.tsx  PaletteBar.tsx  PreviewCanvas.tsx  PrintPlan.tsx  SavePromptModal.css  SavePromptModal.tsx  SpotColorEditor.tsx  Toast.css  Toast.tsx  TopBar.tsx  TransformControls.tsx
src/engine/: cmyk.ts  dilate.ts  dot-settings.ts  edge.ts  export.ts  halftone.ts  key-plate.ts  mask.ts  patterns.ts  png-metadata.ts  print-plan.ts  sampling.ts  smooth.ts  spot-separation.ts  stipple.ts  transform.ts  vectorize.ts
src/engine/webgl/: context.ts  program.ts  quad.ts  render.ts  shared.glsl.ts  texture.ts
src/engine/webgl/patterns/: crosshatch.ts  diamond.ts  dot.ts  ellipse.ts  euclidean.ts  hex.ts  line.ts
src/hooks/: useAppShell.ts  useCanvasTransform.ts  useDirtyTracking.ts  useHalftonePreview.ts  useProjectPersistence.ts  useUndoHistory.ts
src/platform/: halftones-file.ts  index.ts  platform-tauri.ts  platform-web.ts  types.ts
